--- a/plugin.css
+++ b/plugin.css
@@ -3,7 +3,7 @@
 	*{ font-size: 1em; }
 
 	#logo{ float: left; margin-right: 4em; padding: 0px; margin-bottom: 0px; padding-top: 0px; }
-	#logo+h1{ font-size: 3em; color: #208dd0; margin-bottom: 0px; padding-top: 20px;  padding-bottom: 0px; }
+	#logo+h1{ font-size: 3em; color: #208dd0; margin-bottom: 0px; padding-top: 40px;  padding-bottom: 0px; }
 	#logo+h1+div{ background-color: #208dd0; margin: 0px; padding: 1em; margin-left: 4em; }
 	#logo+h1+div a {
 		width: 110px;
@@ -33,6 +33,11 @@
 	
 		background: url("sprites2.png") no-repeat scroll
 	}
+	
+	#mainwell {
+		margin-left: 30px;
+	}
+
 	
 	a[href$=".zip"]:hover{  
 		color: yellow;
