--- a/docs/plugin.css
+++ b/docs/plugin.css
@@ -1,12 +1,43 @@
 
 	@-plugins-require myPlugins.js;
+	@-plugins-const -const-floob div .flip .bar, span .flop.bit;
 	
-	body, html{ margin-top: -20px; margin-left: -10px; padding: 0px; }
+	body, html{ 
+		margin-top: -20px; 
+		margin-left: -10px; 
+		padding: 0px; 
+	}
+	
 	*{ font-size: 1em; }
 
-	#logo{ float: left; margin-right: 4em; padding: 0px; margin-bottom: 0px; padding-top: 0px; }
-	#logo+h1{ font-size: 3em; color: #208dd0; margin-bottom: 0px; padding-top: 40px;  padding-bottom: 0px; }
-	#logo+h1+div{ background-color: #208dd0; margin: 0px; padding: 1em; margin-left: 4em; }
+	/* what happens now? */
+    .x:not(:-plugins-any(:-const-floob)){
+    	background-color: orange;
+    }
+    
+	#logo{ 
+		float: left; 
+		margin-right: 4em; 
+		padding: 0px; 
+		margin-bottom: 0px; 
+		padding-top: 0px; 
+	}
+	
+	#logo+h1{ 
+		font-size: 3em; 
+		color: #208dd0; 
+		margin-bottom: 0px; 
+		padding-top: 40px;  
+		padding-bottom: 0px; 
+	}
+	
+	#logo+h1+div{ 
+		background-color: #208dd0; 
+		margin: 0px; 
+		padding: 1em; 
+		margin-left: 4em; 
+	}
+	
 	#logo+h1+div a {
 		width: 110px;
 		height: 30px;
@@ -63,7 +94,15 @@
 		width: 175px;
 		height: 50px;
 		float: right;
-		color: #ffffff;
+		color: #ffffff; 
 	}
 	
 	a[href$=".zip"] div{ font-size: 0.5em; }
+	
+	[x]:-math-greaterthan(x,10){
+	    border: 10px solid blue !important;
+	}
+	
+	p:-math-least(y){
+		background-color: yellow !important;
+	}
