--- a/test/sample.css
+++ b/test/sample.css
@@ -18,6 +18,7 @@ p .foo:--math-lessthan(data-score,  1000) [bar] {
 	background-color: yellow;
 }
 
+/* was :--math-lessthan(data-score,  1000) */
 #content :--math-greaterthan(data-score, 1000) {
 	background-color: blue;
 }
